--- a/scss/pages/_job.scss
+++ b/scss/pages/_job.scss
@@ -119,6 +119,7 @@
         border: none;
         margin-left: 18%;
         margin-top: 50px;
+        margin-bottom: 50px;
 
         @include media-query(767px){
             width: 80%;
