--- a/scss/pages/_careerdetails.scss
+++ b/scss/pages/_careerdetails.scss
@@ -1,6 +1,6 @@
 .careerdetails {
     display: flex;
-   
+   overflow:hidden;
     
           
       @media (max-width:500px) {
@@ -18,6 +18,7 @@
         padding-left: 5rem;
         padding-right: 5rem;
 z-index:1;
+
         
         
             }
@@ -41,27 +42,30 @@ z-index:1;
          }
         .career-border {
             border-bottom: thin solid white;
+            padding-bottom: 2rem;
         }
         .careerdet-p1 {
-            padding-top: 4rem;
+          padding-top:1.5rem;
             padding-bottom: 2rem;
         }
     
     .careerdetails-item2 {
         width: 50vw;
-        padding-top: 6rem;
+        padding-top: 3rem;
         padding-left: 5rem;
         padding-right: 5rem;
-        z-index: 10;
+        background: white;
+        z-index: 2;
          
 
         a > i {
-            color: $white;
-            background: $skyBlue;
+           color: $skyBlue;
+            background: $white;
+            border: thin solid $skyBlue;
             border-radius: 3rem;
             padding: 0.5rem;
             margin-right: 1rem;
-            margin-top: 1rem;
+            margin-top: 1.5rem;
         }
         p {
             margin-bottom: 2rem;
@@ -71,6 +75,7 @@ z-index:1;
           
         }
         .careerdet-bottom {
+            
             border-bottom: thin solid grey;
             padding-bottom: 1rem;
         }
@@ -79,6 +84,7 @@ z-index:1;
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-gap:0.1rem;
+        margin-top:1rem;
 
         .career-button {
             background-color: skyblue;
