--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css?family=Raleway&display=swap");
 * {
   box-sizing: border-box;
   margin: 0;
@@ -147,6 +148,283 @@ ul {
   .grid .feat2 {
     margin-top: 5rem;
     text-align: center; }
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box; }
+
+a {
+  color: #ffffff;
+  margin-right: 25px; }
+
+#company-section-2 {
+  background-color: #ffffff;
+  font-family: "Raleway" "sans-serif"; }
+  #company-section-2 #first-company-section {
+    width: 100%;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto; }
+    #company-section-2 #first-company-section img#company-section-2-banner {
+      width: 100%; }
+    #company-section-2 #first-company-section .first-company-section-item {
+      position: absolute;
+      width: 33%;
+      top: 174px;
+      left: 151px;
+      text-align: left;
+      color: #ffffff; }
+      @media screen and (max-width: 1300px) {
+        #company-section-2 #first-company-section .first-company-section-item {
+          width: 50%;
+          left: 50px;
+          top: 90px;
+          padding-right: 50px; } }
+      @media screen and (max-width: 1200px) {
+        #company-section-2 #first-company-section .first-company-section-item {
+          width: 70%;
+          left: 50px;
+          top: 80px;
+          padding-right: 50px; } }
+      @media screen and (max-width: 767px) {
+        #company-section-2 #first-company-section .first-company-section-item {
+          top: 30px;
+          width: 80%; } }
+      #company-section-2 #first-company-section .first-company-section-item p {
+        margin-bottom: 30px; }
+        @media screen and (max-width: 1200px) {
+          #company-section-2 #first-company-section .first-company-section-item p {
+            margin-bottom: 5px; } }
+        @media screen and (max-width: 767px) {
+          #company-section-2 #first-company-section .first-company-section-item p {
+            margin-bottom: 20px;
+            font-size: 13px; } }
+      #company-section-2 #first-company-section .first-company-section-item p:nth-child(1) {
+        font-size: 13px;
+        line-height: 18px;
+        opacity: 0.5; }
+        #company-section-2 #first-company-section .first-company-section-item p:nth-child(1) span {
+          margin-left: 15px;
+          cursor: pointer; }
+          #company-section-2 #first-company-section .first-company-section-item p:nth-child(1) span:active {
+            opacity: 1; }
+      #company-section-2 #first-company-section .first-company-section-item h1 {
+        font-size: 60px;
+        line-height: 60px;
+        margin: 20px 0; }
+        @media screen and (max-width: 767px) {
+          #company-section-2 #first-company-section .first-company-section-item h1 {
+            display: none;
+            font-size: 30px;
+            margin: 5px 0; } }
+  #company-section-2 #second-company-section h2 {
+    color: #000000;
+    font-size: 42px;
+    line-height: 49px;
+    margin-left: 10%;
+    margin-top: 110px; }
+    @media screen and (max-width: 767px) {
+      #company-section-2 #second-company-section h2 {
+        margin-top: 0px;
+        font-size: 25px; } }
+  #company-section-2 #second-company-section .slider {
+    display: flex;
+    width: 80%;
+    margin-top: 80px;
+    margin-right: auto;
+    margin-left: auto;
+    justify-content: space-between;
+    padding-bottom: 70px;
+    border-bottom: 1px solid #C4C4C4; }
+    @media screen and (max-width: 767px) {
+      #company-section-2 #second-company-section .slider {
+        display: none;
+        flex-direction: column;
+        margin-top: 5px; } }
+    #company-section-2 #second-company-section .slider #i2, #company-section-2 #second-company-section .slider #i1, #company-section-2 #second-company-section .slider #i3 {
+      display: none; }
+    #company-section-2 #second-company-section .slider .flex-item-1 {
+      width: 30%;
+      background: #ffffff;
+      box-shadow: 0px 5px 25px rgba(0, 0, 0, 0.05);
+      border-radius: 8px;
+      padding-bottom: 70px; }
+      @media screen and (max-width: 767px) {
+        #company-section-2 #second-company-section .slider .flex-item-1 {
+          width: 85%;
+          margin-left: auto;
+          margin-right: auto; } }
+      @media screen and (min-width: 768px) {
+        #company-section-2 #second-company-section .slider .flex-item-1 .pre, #company-section-2 #second-company-section .slider .flex-item-1 .next {
+          display: none; } }
+      #company-section-2 #second-company-section .slider .flex-item-1 img {
+        width: 100%; }
+      #company-section-2 #second-company-section .slider .flex-item-1 h3 {
+        color: #555555;
+        margin: 30px 40px 5px 30px;
+        font-size: 18px;
+        line-height: 22px; }
+      #company-section-2 #second-company-section .slider .flex-item-1 p {
+        color: #878787;
+        margin-left: 30px;
+        margin-right: 40px;
+        font-size: 16px;
+        line-height: 22px; }
+  @media screen and (max-width: 767px) {
+    #company-section-2 #second-company-section #flex-container-1 {
+      display: block;
+      color: black;
+      position: relative;
+      height: 365px;
+      width: 75%;
+      border-bottom: 1px solid #C4C4C4; }
+      #company-section-2 #second-company-section #flex-container-1 #i2, #company-section-2 #second-company-section #flex-container-1 #i1, #company-section-2 #second-company-section #flex-container-1 #i3 {
+        display: none; }
+      #company-section-2 #second-company-section #flex-container-1 #i1:checked ~ #first,
+      #company-section-2 #second-company-section #flex-container-1 #i2:checked ~ #second,
+      #company-section-2 #second-company-section #flex-container-1 #i3:checked ~ #third {
+        z-index: 9; }
+      #company-section-2 #second-company-section #flex-container-1 .slide-content {
+        position: absolute;
+        width: 90%;
+        height: 90%;
+        z-index: -1; }
+        #company-section-2 #second-company-section #flex-container-1 .slide-content .pre {
+          color: #000000;
+          position: absolute;
+          left: 90px;
+          top: 300px;
+          cursor: pointer; }
+        #company-section-2 #second-company-section #flex-container-1 .slide-content .next {
+          color: #000000;
+          position: absolute;
+          right: 90px;
+          top: 300px;
+          cursor: pointer; }
+        #company-section-2 #second-company-section #flex-container-1 .slide-content p {
+          margin-bottom: 80px; } }
+  #company-section-2 #section-3 {
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: space-between;
+    width: 80%;
+    padding-top: 80px;
+    padding-bottom: 40px;
+    position: relative; }
+    @media screen and (max-width: 767px) {
+      #company-section-2 #section-3 {
+        padding-top: 50px;
+        flex-direction: column; } }
+    #company-section-2 #section-3 .container-item {
+      width: 27%;
+      text-align: left; }
+      @media screen and (max-width: 767px) {
+        #company-section-2 #section-3 .container-item {
+          width: 90%;
+          margin-bottom: 40px; } }
+      #company-section-2 #section-3 .container-item h4 {
+        margin-top: 20px;
+        color: #555555;
+        font-size: 18px;
+        line-height: 22px;
+        margin-bottom: 10px; }
+      #company-section-2 #section-3 .container-item p {
+        color: #878787;
+        font-size: 16px;
+        line-height: 22px;
+        margin-right: 40px; }
+  #company-section-2 #section-4 {
+    background: linear-gradient(180deg, #F6F6F6 0.3%, rgba(250, 250, 250, 0) 64.6%);
+    clip-path: polygon(48% 2%, 79% 0, 100% 2%, 100% 100%, 48% 100%, 0 100%, 0 63%, 0 0, 22% 2%); }
+    #company-section-2 #section-4 .mobile-form {
+      display: none; }
+      @media screen and (max-width: 767px) {
+        #company-section-2 #section-4 .mobile-form {
+          display: block; }
+          #company-section-2 #section-4 .mobile-form h3 {
+            color: #555555;
+            text-align: left;
+            font-size: 22px;
+            line-height: 27px;
+            width: 80%;
+            padding-right: 70px;
+            margin: 20px auto;
+            padding-top: 60px; }
+          #company-section-2 #section-4 .mobile-form form {
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            margin-left: auto;
+            margin-right: auto;
+            width: 90%;
+            background: #FFFFFF;
+            box-shadow: 0px 5px 25px rgba(0, 0, 0, 0.05);
+            border-radius: 8px;
+            padding: 20px 0; }
+            #company-section-2 #section-4 .mobile-form form .form-item {
+              width: 90%;
+              margin: 10px auto;
+              height: 30px;
+              border: 0.5px solid #878787;
+              border-radius: 8px;
+              padding-left: 15px; }
+            #company-section-2 #section-4 .mobile-form form .form-item:last-child {
+              background: #01AAE4;
+              box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.1);
+              border-radius: 8px;
+              border: none; } }
+    #company-section-2 #section-4 h2 {
+      width: 30%;
+      margin: 50px 0 90px 10%;
+      padding-top: 90px;
+      padding-bottom: 60px;
+      color: #555555; }
+      @media screen and (max-width: 767px) {
+        #company-section-2 #section-4 h2 {
+          display: none; } }
+    #company-section-2 #section-4 .flex-container-3 {
+      background: linear-gradient(180deg, #F6F6F6 0.3%, rgba(250, 250, 250, 0) 64.6%);
+      border-top: 2px solid #f6f6f6;
+      border-right: 2px solid #f6f6f6;
+      display: flex;
+      margin-left: auto;
+      margin-right: auto;
+      justify-content: space-between;
+      width: 80%;
+      flex-wrap: wrap; }
+      @media screen and (max-width: 767px) {
+        #company-section-2 #section-4 .flex-container-3 {
+          display: none; } }
+      #company-section-2 #section-4 .flex-container-3 .flex-item-3 {
+        width: 25%;
+        padding-left: 33px;
+        border-bottom: 2px solid #f6f6f6;
+        border-left: 2px solid #f6f6f6; }
+        #company-section-2 #section-4 .flex-container-3 .flex-item-3 img {
+          margin-top: 40px; }
+        #company-section-2 #section-4 .flex-container-3 .flex-item-3 h3 {
+          color: #444444;
+          font-size: 18px;
+          margin-top: 30px; }
+        #company-section-2 #section-4 .flex-container-3 .flex-item-3 h5 {
+          font-size: 13px;
+          color: #8C939C; }
+        #company-section-2 #section-4 .flex-container-3 .flex-item-3 p {
+          margin-bottom: 40px;
+          color: #8C939C;
+          font-size: 10px;
+          margin-top: 75px; }
+        #company-section-2 #section-4 .flex-container-3 .flex-item-3:hover {
+          background-color: #ffffff;
+          box-shadow: 0px 5px 25px rgba(0, 0, 0, 0.1); }
+          #company-section-2 #section-4 .flex-container-3 .flex-item-3:hover h3, #company-section-2 #section-4 .flex-container-3 .flex-item-3:hover p {
+            color: #01AAE4; }
+      #company-section-2 #section-4 .flex-container-3 .flex-item-3:nth-child(8) {
+        background-color: #F6F6F6; }
+        #company-section-2 #section-4 .flex-container-3 .flex-item-3:nth-child(8) img {
+          margin-top: 60px; }
 
 .ctamodal {
   text-align: center;
