--- a/scss/main.scss
+++ b/scss/main.scss
@@ -19,7 +19,7 @@
 @import 'pages/_about'; 
 @import 'pages/_contact'; 
 @import 'pages/_home'; 
-
+@import 'pages/company-section-2';
 @import 'themes/_admin'; 
 @import 'themes/_themes'; 
 
