--- a/scss/pages/_careerdetails.scss
+++ b/scss/pages/_careerdetails.scss
@@ -3,7 +3,7 @@
    overflow:hidden;
     
           
-      @media (max-width:500px) {
+      @media (max-width:580px) {
           display: none;
          
           
@@ -113,12 +113,35 @@ z-index:1;
 
           .career-details-mobile{
               display: none;
+              .careerdet-p1{
+                  padding: 2rem ;
+
+                  p{
+                      padding: 2rem;
+                  }
+              }
+
+              .mobile-image-text{
+       
+
+                position: relative;
+                text-align: center;
+                color: white;
+                margin-top:4rem;
+             
+                .bottom-left {
+                    position: absolute;
+                    bottom: 1rem;
+                    left: 5rem;
+                  }}
             .careerdet-mobile-image{
                 margin-top:5rem;
                 margin-bottom:2rem;
             }
             .career-det-mobile-h3{
+                margin-top:2rem;
 margin-bottom:2rem;
+padding:2rem;
             }
 
             .career-det-mebiabtn{
@@ -132,7 +155,7 @@ margin-bottom:2rem;
             }
 .careerdet-mobile1{
     text-align:center;
-
+margin-top:-2rem;
    
 h1{
     margin-top: 5rem;
@@ -153,7 +176,7 @@ h1{
 
 
 
-              @media (max-width:500px) {
+              @media (max-width:580px) {
                   display: block;
               }
           }
