--- a/css/main.css
+++ b/css/main.css
@@ -188,7 +188,7 @@ ul {
 .careerdetails {
   display: flex;
   overflow: hidden; }
-  @media (max-width: 500px) {
+  @media (max-width: 580px) {
     .careerdetails {
       display: none; } }
 
@@ -271,11 +271,26 @@ ul {
 
 .career-details-mobile {
   display: none; }
+  .career-details-mobile .careerdet-p1 {
+    padding: 2rem; }
+    .career-details-mobile .careerdet-p1 p {
+      padding: 2rem; }
+  .career-details-mobile .mobile-image-text {
+    position: relative;
+    text-align: center;
+    color: white;
+    margin-top: 4rem; }
+    .career-details-mobile .mobile-image-text .bottom-left {
+      position: absolute;
+      bottom: 1rem;
+      left: 5rem; }
   .career-details-mobile .careerdet-mobile-image {
     margin-top: 5rem;
     margin-bottom: 2rem; }
   .career-details-mobile .career-det-mobile-h3 {
-    margin-bottom: 2rem; }
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    padding: 2rem; }
   .career-details-mobile .career-det-mebiabtn {
     background-color: skyblue;
     border: none;
@@ -285,7 +300,8 @@ ul {
     width: 25rem;
     margin-top: 2rem; }
   .career-details-mobile .careerdet-mobile1 {
-    text-align: center; }
+    text-align: center;
+    margin-top: -2rem; }
     .career-details-mobile .careerdet-mobile1 h1 {
       margin-top: 5rem;
       margin-bottom: 1rem; }
@@ -297,7 +313,7 @@ ul {
       height: 2.5rem;
       width: 25rem;
       margin-top: 2rem; }
-  @media (max-width: 500px) {
+  @media (max-width: 580px) {
     .career-details-mobile {
       display: block; } }
 
