--- a/scss/main.scss
+++ b/scss/main.scss
@@ -20,6 +20,8 @@
 @import 'pages/_contact'; 
 @import 'pages/_home'; 
 @import 'pages/company-section-2';
+@import 'pages/people-2.scss';
+
 @import 'themes/_admin'; 
 @import 'themes/_themes'; 
 
