--- a/css/main.css
+++ b/css/main.css
@@ -48,36 +48,60 @@ ul {
     margin-left: 0.5rem; }
 
 .navbar {
+  display: flex;
   font-size: 1.2rem;
-  padding-top: 0.3rem;
-  padding-bottom: 0.3rem;
-  margin-top: 2rem; }
-  .navbar .containe {
-    max-width: 100%;
-    margin: auto;
-    padding: 0 2rem;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    margin-right: 6rem; }
-  .navbar .nav {
-    justify-self: flex-end;
+  margin-top: 2rem;
+  margin-left: 5rem;
+  overflow: hidden; }
+  .navbar .navbar-ul {
     display: flex;
-    align-items: center;
-    justify-content: center; }
-  .navbar .nav a {
-    padding: 0 1rem; }
+    margin-left: 30rem;
+    width: 60vw; }
+    .navbar .navbar-ul a {
+      margin-left: 0%;
+      margin-right: 1.5rem;
+      color: blue; }
+    .navbar .navbar-ul .people-nav {
+      border-right: 0.5px solid grey;
+      margin-right: 1.5rem; }
+    .navbar .navbar-ul .send-nav {
+      border: 1px solid #FFFFFF;
+      border-radius: 8px;
+      height: 2.5rem;
+      width: 16rem;
+      padding-left: 1.3rem;
+      padding-top: 0.2rem; }
+    .navbar .navbar-ul .support-nav {
+      margin-left: 0.5rem;
+      margin-bottom: 0.3rem; }
   .navbar .headerimg {
-    margin-left: 8rem; }
-  .navbar .header-button {
-    border: 1px solid #01AAE4;
-    border-radius: 8px; }
-  .navbar .people {
-    border-right: 0.5px solid #878787; }
-  .navbar .supporticon {
-    margin-left: 0.5rem; }
-  @media (max-width: 500px) {
-    .navbar .nav {
-      display: none; } }
+    margin-left: 100%; }
+
+.media-header {
+  display: none; }
+
+@media (max-width: 768px) {
+  .navbar-ul {
+    display: none; }
+  .headerimg {
+    display: none; }
+  .media-header {
+    margin-top: -30.5%;
+    display: block;
+    background: #AAAAAA;
+    padding: 0 2rem;
+    position: relative; }
+    .media-header .media-header1 {
+      position: absolute;
+      top: 12%;
+      width: 30px; }
+    .media-header .media-header2 {
+      margin-left: 4rem; }
+    .media-header .media-header3 {
+      width: 30px;
+      margin-left: 3rem;
+      position: absolute;
+      top: 10%; } }
 
 .navber {
   margin-top: 10%;
@@ -211,7 +235,9 @@ ul {
     box-shadow: 0px 5px 25px rgba(0, 0, 0, 0.05);
     border-radius: 8px; }
     .features .features1__text {
-      font-weight: bold; }
+      font-weight: bold;
+      font-size: 10px;
+      text-align: center; }
 
 .article {
   background-image: url("https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568412244/samples/figma%20homepage/xhcnv8qdg16hi5dw9ubq.jpg");
@@ -467,9 +493,9 @@ u {
         justify-content: center;
         align-items: center;
         border: none; }
-      .features .features1__text {
+      .features .features1 .features1__text {
         text-align: center;
-        font-size: 10px;
+        font-size: 8px;
         width: 100px;
         margin-top: 10%;
         margin-left: -10%; }
@@ -750,10 +776,10 @@ u {
     display: flex;
     flex-direction: column;
     margin-top: 10%; }
-    .mobileCompanyBody__header {
+    .mobileCompanyBody .mobileCompanyBody__header {
       font-size: 24px;
       line-height: 29px; }
-    .mobileCompanyBody__text {
+    .mobileCompanyBody .mobileCompanyBody__text {
       font-size: 14px;
       line-height: 19px;
       color: #878787; }
@@ -783,6 +809,13 @@ u {
 .peopleVideo {
   margin-top: 10%; }
 
+.peopleCarousel {
+  margin-top: 10%;
+  margin-bottom: 10%; }
+
+.peopleCarousel__image3 {
+  width: 1200px; }
+
 @media screen and (max-width: 580px) {
   .peopleSection {
     display: none; }
@@ -804,7 +837,19 @@ u {
   .peopleVideo__image {
     display: none; }
   .mobilePeopleVideo__image {
-    display: flex; } }
+    display: flex; }
+  .peopleCarousel {
+    width: 300px;
+    height: 200px; }
+  .peopleCarousel__image1 {
+    width: 300px;
+    height: 200px; }
+  .peopleCarousel__image2 {
+    width: 300px;
+    height: 200px; }
+  .peopleCarousel__image3 {
+    width: 300px;
+    height: 200px; } }
 
 .peopleHome {
   background: #505050;
