--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -1,56 +1,87 @@
-.navbar{
+.navbar {
+    display: flex;
     font-size: 1.2rem;
-    padding-top: 0.3rem;
-    padding-bottom: 0.3rem;
     margin-top: 2rem;
-
-    .containe{
-       
-        @include conTain;
-        display:grid;
-        grid-template-columns: repeat(2, 1fr);
-        margin-right: 6rem;
-      }
-
-    .nav{
-        justify-self:flex-end;
+    margin-left: 5rem;
+    overflow: hidden;
+    .navbar-ul {
         display: flex;
-        align-items: center;
-        justify-content: center;
+        margin-left: 30rem;
+        width: 60vw;
+        a {
+            margin-left: 0%;
+            margin-right: 1.5rem;
+            color: blue;
+        }
+        .people-nav {
+            border-right: 0.5px solid grey;
+            margin-right: 1.5rem;
+        }
+        .send-nav {
+            border: 1px solid $white;
+            border-radius: 8px;
+            height: 2.5rem;
+            width: 16rem;
+            padding-left: 1.3rem;
+            padding-top: 0.2rem;
+        }
+        .support-nav {
+            margin-left: 0.5rem;
+            margin-bottom: 0.3rem;
+        }
+    }
+    .headerimg {
+        margin-left: 100%;
+    }
+}
+.media-header {
+    @include hidden();
+}
+
+@media(max-width:768px) {
+    .navbar-ul {
+        display: none;
+    }
+    .headerimg {
+        display: none;
     }
 
+    .media-header {
+        margin-top: -30.5%;
+        display: block;
+        background: $lightGrey;
+        padding: 0 2rem;
+        position: relative;
+
+        .media-header1 {
     
-
-    .nav a{
-        padding: 0 1rem;
-    }
-
-    .headerimg{
-        margin-left: 8rem;
-    }
-
-    .header-button{
-        border: 1px solid $skyBlue; 
-        border-radius: 8px;
-}
-
-.people{
-    border-right: 0.5px solid $midGrey;
-    
-}
-.supporticon{
-    @include supportIcon();
-}
-
-
-@media(max-width:500px){
-    .nav{
-       display: none;
+            position: absolute;
+            top: 12%;
+            width: 30px;
+        }
+        
+        .media-header2 {
+            margin-left:4rem;
+           
+        }
+        
+        
+        .media-header3 {
+            width: 30px;
+            margin-left:3rem;
+            position: absolute;
+            top: 10%;
+           
+        }
+        
     }
 }
 
 
-}
+
+
+
+
 
 .navber{
 
