--- a/scss/pages/_company.scss
+++ b/scss/pages/_company.scss
@@ -106,11 +106,12 @@
       @include flex(flex, column);
       margin-top: 10%;
   
-      &__header {
+      .mobileCompanyBody__header {
         font-size: 24px;
         line-height: 29px;
+        
       }
-      &__text {
+      .mobileCompanyBody__text {
         @include font(14px, 19px, $midGrey);
       }
     }
