--- a/scss/pages/_people.scss
+++ b/scss/pages/_people.scss
@@ -18,6 +18,13 @@
 .peopleVideo {
     margin-top: 10%;
 }
+.peopleCarousel {
+    margin-top: 10%;
+    margin-bottom: 10%;
+}
+.peopleCarousel__image3 {
+    width: 1200px;
+}
 
 @media screen and (max-width: 580px) {
     .peopleSection {
@@ -44,5 +51,23 @@
     
     .mobilePeopleVideo__image {
         display: flex;
+    }
+
+    .peopleCarousel {
+        width: 300px;
+        height: 200px;
+    }
+    .peopleCarousel__image1 {
+        width: 300px;
+        height: 200px;
+    }
+    .peopleCarousel__image2 {
+        width: 300px;
+        height: 200px;
+    }
+    .peopleCarousel__image3 {
+        width: 300px;
+        height: 200px;
+        
     }
 }
