--- a/scss/main.scss
+++ b/scss/main.scss
@@ -19,8 +19,9 @@
 @import 'pages/_about'; 
 @import 'pages/_contact'; 
 @import 'pages/_home'; 
-@import 'pages/company-section-2';
+@import 'pages/_company-section-2';
 @import 'pages/people-2.scss';
+@import 'pages/_job';
 
 @import 'themes/_admin'; 
 @import 'themes/_themes'; 
