--- a/scss/main.scss
+++ b/scss/main.scss
@@ -22,6 +22,8 @@
 @import 'pages/_contact'; 
 @import 'pages/_home'; 
 @import 'pages/_homepage'; 
+@import 'pages/_people'; 
+
 
 @import 'themes/_admin'; 
 @import 'themes/_themes'; 
